@@ -1,3 +1,8 @@
+2013-11-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/reporting/reporting_builder.php: Fix filter groups
+	of reports.
+
 2013-11-18  Sergio Martin <sergio.martin@artica.es>
 
 	* images/status_sets/default/server_ok.png: Change the
